--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -4,8 +4,57 @@
 @{
     Layout = "_Layout2";
 }
-
-<h2>Separate page model</h2>
-<p>
-    @Model.Message
-</p>
+<div>
+    <div class="min-vh-100 d-flex flex-column justify-content-between">
+        <div>
+            <section class="text-center p-5">
+                <img src="~/img/logo.png" alt="">
+            </section>
+            <div class="loginContainer shadow-sm text-center px-5 py-3">
+                <p class="fw-bold">Log in to your account</p>
+                <input class="form-control" name="textMessage" id="textMessage" type="text" placeholder="Enter email">
+                <div>
+                    <button class="btn w-100 btn-primary my-4 shadow-none">Continue</button>
+                </div>
+                <p>or</p>
+                <div class="">
+                    <button class="border bg-white w-100 d-flex justify-content-between align-items-center p-2 my-3 shadow-sm fw-bold">
+                        <img src="https://aid-frontend.prod.atl-paas.net/atlassian-id/front-end/5.0.410/static/media/google-logo.e086107b.svg"
+                             alt="google-logo" height="18px">
+                        <a class="text-decoration-none text-dark w-100" href="#">Continue with Google</a>
+                    </button>
+                    <button class="border bg-white w-100 d-flex justify-content-between align-items-center p-2 my-3 shadow-sm fw-bold">
+                        <img src="https://aid-frontend.prod.atl-paas.net/atlassian-id/front-end/5.0.410/static/media/microsoft-logo.42b61fa1.svg"
+                             alt="Microsoft-logo" height="18px">
+                        <a class="text-decoration-none text-dark w-100" href="#">Continue with Microsoft</a>
+                    </button>
+                    <button class="border bg-white w-100 d-flex justify-content-between align-items-center p-2 my-3 shadow-sm fw-bold">
+                        <img src="https://aid-frontend.prod.atl-paas.net/atlassian-id/front-end/5.0.410/static/media/apple-logo.4f2453fb.svg"
+                             alt="Apple-logo" height="18px">
+                        <a class="text-decoration-none text-dark w-100" href="#">Continue with Apple</a>
+                    </button>
+                    <button class="border bg-white w-100 d-flex justify-content-between align-items-center p-2 my-3 shadow-sm fw-bold">
+                        <img src="https://aid-frontend.prod.atl-paas.net/atlassian-id/front-end/5.0.410/static/media/slack-logo.0390f069.svg"
+                             alt="Apple-logo" height="18px">
+                        <a class="text-decoration-none text-dark w-100" href="#">Continue with Slack</a>
+                    </button>
+                </div>
+                <hr class="m-0 mt-5">
+                <div class="pt-3 align-top">
+                    <a href="#" class="text-decoration-none">Can't log in?</a>
+                    <div class="p-1 d-inline align-middle">.</div>
+                    <a href="#" class="text-decoration-none">Sign up for an account</a>
+                </div>
+            </div>
+            <footer>
+                <p class="text-center pt-3"><a href="#" class="text-decoration-none">Privacy Policy</a> . <a href="#" class="text-decoration-none">User Notice</a></p>
+            </footer>
+        </div>
+        <div class="mt-4" id="bottomCreds">
+            <section class="text-center">
+                <img src="~/img/logo.png" alt="">
+                <p class="mt-3">A Payment Gateway - Registered 2023</p>
+            </section>
+        </div>
+    </div>
+</div>
