--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -19,22 +19,22 @@
                 <p>or</p>
                 <div class="">
                     <button class="border bg-white w-100 d-flex justify-content-between align-items-center p-2 my-3 shadow-sm fw-bold">
-                        <img src="https://aid-frontend.prod.atl-paas.net/atlassian-id/front-end/5.0.410/static/media/google-logo.e086107b.svg"
+                        <img src="~/img/icons/google-logo.svg"
                              alt="google-logo" height="18px">
                         <a class="text-decoration-none text-dark w-100" href="#">Continue with Google</a>
                     </button>
                     <button class="border bg-white w-100 d-flex justify-content-between align-items-center p-2 my-3 shadow-sm fw-bold">
-                        <img src="https://aid-frontend.prod.atl-paas.net/atlassian-id/front-end/5.0.410/static/media/microsoft-logo.42b61fa1.svg"
+                        <img src="~/img/icons/microsoft-logo.svg"
                              alt="Microsoft-logo" height="18px">
                         <a class="text-decoration-none text-dark w-100" href="#">Continue with Microsoft</a>
                     </button>
                     <button class="border bg-white w-100 d-flex justify-content-between align-items-center p-2 my-3 shadow-sm fw-bold">
-                        <img src="https://aid-frontend.prod.atl-paas.net/atlassian-id/front-end/5.0.410/static/media/apple-logo.4f2453fb.svg"
+                        <img src="~/img/icons/apple-logo.svg"
                              alt="Apple-logo" height="18px">
                         <a class="text-decoration-none text-dark w-100" href="#">Continue with Apple</a>
                     </button>
                     <button class="border bg-white w-100 d-flex justify-content-between align-items-center p-2 my-3 shadow-sm fw-bold">
-                        <img src="https://aid-frontend.prod.atl-paas.net/atlassian-id/front-end/5.0.410/static/media/slack-logo.0390f069.svg"
+                        <img src="~/img/icons/slack-logo.svg"
                              alt="Apple-logo" height="18px">
                         <a class="text-decoration-none text-dark w-100" href="#">Continue with Slack</a>
                     </button>
@@ -49,12 +49,6 @@
             <footer>
                 <p class="text-center pt-3"><a href="#" class="text-decoration-none">Privacy Policy</a> . <a href="#" class="text-decoration-none">User Notice</a></p>
             </footer>
-        </div>
-        <div class="mt-4" id="bottomCreds">
-            <section class="text-center">
-                <img src="~/img/logo.png" alt="">
-                <p class="mt-3">A Payment Gateway - Registered 2023</p>
-            </section>
         </div>
     </div>
 </div>
