--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -5,49 +5,49 @@
     Layout = "_Layout2";
 }
 <div>
-    <div class="min-vh-100 d-flex flex-column justify-content-between">
-        <div>
+    <div class="min-vh-100 d-flex justify-content-around align-items-center">
+        <div class="w-75">
             <section class="text-center p-5">
                 <img src="~/img/logo.png" alt="">
             </section>
-            <div class="loginContainer shadow-sm text-center px-5 py-3">
-                <p class="fw-bold">Log in to your account</p>
-                <input class="form-control" name="textMessage" id="textMessage" type="text" placeholder="Enter email">
+            <div class="loginContainer shadow-sm text-center px-5 py-3 w-50">
+                <p class="fw-bold">ログイン</p>
+                <input class="form-control" name="textMessage" id="textMessage" type="text" placeholder="メールを入力">
                 <div>
-                    <button class="btn w-100 btn-primary my-4 shadow-none">Continue</button>
+                    <button class="btn w-100 btn-primary my-4 shadow-none">続ける</button>
                 </div>
-                <p>or</p>
+                <p>または</p>
                 <div class="">
                     <button class="border bg-white w-100 d-flex justify-content-between align-items-center p-2 my-3 shadow-sm fw-bold">
                         <img src="~/img/icons/google-logo.svg"
                              alt="google-logo" height="18px">
-                        <a class="text-decoration-none text-dark w-100" href="#">Continue with Google</a>
+                        <a class="text-decoration-none text-dark w-100" href="#">Googleで続ける</a>
                     </button>
                     <button class="border bg-white w-100 d-flex justify-content-between align-items-center p-2 my-3 shadow-sm fw-bold">
                         <img src="~/img/icons/microsoft-logo.svg"
                              alt="Microsoft-logo" height="18px">
-                        <a class="text-decoration-none text-dark w-100" href="#">Continue with Microsoft</a>
+                        <a class="text-decoration-none text-dark w-100" href="#">Microsoftで続ける</a>
                     </button>
                     <button class="border bg-white w-100 d-flex justify-content-between align-items-center p-2 my-3 shadow-sm fw-bold">
                         <img src="~/img/icons/apple-logo.svg"
                              alt="Apple-logo" height="18px">
-                        <a class="text-decoration-none text-dark w-100" href="#">Continue with Apple</a>
+                        <a class="text-decoration-none text-dark w-100" href="#">Appleで続ける</a>
                     </button>
                     <button class="border bg-white w-100 d-flex justify-content-between align-items-center p-2 my-3 shadow-sm fw-bold">
                         <img src="~/img/icons/slack-logo.svg"
                              alt="Apple-logo" height="18px">
-                        <a class="text-decoration-none text-dark w-100" href="#">Continue with Slack</a>
+                        <a class="text-decoration-none text-dark w-100" href="#">Slackで続ける</a>
                     </button>
                 </div>
                 <hr class="m-0 mt-5">
                 <div class="pt-3 align-top">
-                    <a href="#" class="text-decoration-none">Can't log in?</a>
+                    <a href="#" class="text-decoration-none">ログインできない?</a>
                     <div class="p-1 d-inline align-middle">.</div>
-                    <a href="#" class="text-decoration-none">Sign up for an account</a>
+                    <a href="#" class="text-decoration-none">登録</a>
                 </div>
             </div>
             <footer>
-                <p class="text-center pt-3"><a href="#" class="text-decoration-none">Privacy Policy</a> . <a href="#" class="text-decoration-none">User Notice</a></p>
+                <p class="text-center pt-3"><a href="#" class="text-decoration-none">個人情報保護方針</a> . <a href="#" class="text-decoration-none">利用規約</a></p>
             </footer>
         </div>
     </div>
