--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -39,3 +39,8 @@
         </div>
     </div>
 </section>
+
+@* 【Update Home】2023/12/31 ThuyTrang Add↓ *@
+
+
+@* 【Update Home】2023/12/31 ThuyTrang Add↑ *@ 
