--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@ Function : Layout for guest *@
                         </div>
                     </a>
 
-                    <a class="nav-item btn btn-primary" style="color:white;" type="button" href="/login">ログイン</a>
+                    <a class="nav-item btn btn-primary" style="color:white;" type="button" asp-page="/Login">ログイン</a>
 
                 </div>
             </div>
