--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -5,17 +5,24 @@
     Layout = "_Layout2";
 }
 <div>
-    <div class="min-vh-100 d-flex justify-content-around align-items-center">
+    <div class=" d-flex justify-content-around align-items-center">
         <div class="w-75">
             <section class="text-center p-5">
                 <img src="~/img/logo.png" alt="">
             </section>
             <div class="loginContainer shadow-sm text-center px-5 py-3 w-50">
                 <p class="fw-bold">ログイン</p>
-                <input class="form-control" name="textMessage" id="textMessage" type="text" placeholder="メールを入力">
-                <div>
-                    <button class="btn w-100 btn-primary my-4 shadow-none">続ける</button>
-                </div>
+                <form >
+                    <div class="form-floating mb-3">
+                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <label for="floatingInput">メールアドレス</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="password" class="form-control" id="passwordSignIn" placeholder="Password">
+                        <label for="passwordSignIn">パスワード</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary submit_btn w-100 my-4" id="btnLogin">コグイン</button>
+                </form>
                 <p>または</p>
                 <div class="">
                     <button class="border bg-white w-100 d-flex justify-content-between align-items-center p-2 my-3 shadow-sm fw-bold">
@@ -43,7 +50,7 @@
                 <div class="pt-3 align-top">
                     <a href="#" class="text-decoration-none">ログインできない?</a>
                     <div class="p-1 d-inline align-middle">.</div>
-                    <a href="#" class="text-decoration-none">登録</a>
+                    <a asp-page="./SignUp">登録</a> 
                 </div>
             </div>
             <footer>
