--- a/Pages/Shared/_Layout2.cshtml
+++ b/Pages/Shared/_Layout2.cshtml
@@ -10,14 +10,13 @@ Function : Layout for login *@
     <link rel="stylesheet" href="~/css/login.css" asp-append-version="true" />
 </head>
 <body>
-    <div class="container">
+    <div class="container vh-100">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/login.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
