--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -12,14 +12,16 @@
             </section>
             <div class="loginContainer shadow-sm text-center px-5 py-3 w-50">
                 <p class="fw-bold">ログイン</p>
-                <form >
+                <form method="post" >
                     <div class="form-floating mb-3">
-                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                        <label for="floatingInput">メールアドレス</label>
+                        <input asp-for="AccountInput.Email" class="form-control" type="email id="email" placeholder="name@example.com" />
+                        <label asp-for="AccountInput.Email" class="control-label" for="email">メールアドレス</label>
+                        <span asp-validation-for="AccountInput.Email" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="password" class="form-control" id="passwordSignIn" placeholder="Password">
-                        <label for="passwordSignIn">パスワード</label>
+                        <input asp-for="AccountInput.Password" class="form-control" 　type="password" id="password" placeholder="Password" />
+                        <label asp-for="AccountInput.Password" class="control-label" for="password">パスワード</label>
+                        <span asp-validation-for="AccountInput.Password" class="text-danger"></span>
                     </div>
                     <button type="submit" class="btn btn-primary submit_btn w-100 my-4" id="btnLogin">コグイン</button>
                 </form>
