--- a/Pages/Home/Index.cshtml
+++ b/Pages/Home/Index.cshtml
@@ -3,3 +3,41 @@
 @{
     Layout = "_LayoutHome";
 }
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid" role="navigation">
+        <a class="navbar-brand" href="">
+            <img src="~/img/logo.png" alt="">
+        </a>
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav ms-auto">
+                <a class="nav-item">
+                    @Model.TimeNow
+                </a>
+                <a class="nav-item">
+                    <div class="dropdown mx-2 d-none d-lg-block">
+                        <a class="btn btn-outline-primary meet-create dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                            <span class="d-lg-inline">Try meet</span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><span class="dropdown-item">For businesses</span></li>
+                            <li><span class="dropdown-item">For Everyone</span></li>
+                        </ul>
+                    </div>
+                </a>
+
+                <a class="nav-item btn btn-primary" style="color:white;" type="button" asp-page="/Login">Log in</a>
+
+            </div>
+        </div>
+
+    </div>
+
+</nav>
+<div class="container">
+    <main role="main" class="pb-3">
+
+    </main>
+</div>
