--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -11,52 +11,52 @@
                 <img src="~/img/logo.png" alt="">
             </section>
             <div class="loginContainer shadow-sm text-center px-5 py-3 w-50">
-                <p class="fw-bold">ログイン</p>
+                <p class="fw-bold">Login</p>
                 <form method="post" >
                     <div class="form-floating mb-3">
                         <input asp-for="AccountInput.Email" class="form-control" type="email id="email" placeholder="name@example.com" />
-                        <label asp-for="AccountInput.Email" class="control-label" for="email">メールアドレス</label>
+                        <label asp-for="AccountInput.Email" class="control-label" for="email">Email Address</label>
                         <span asp-validation-for="AccountInput.Email" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
                         <input asp-for="AccountInput.Password" class="form-control" 　type="password" id="password" placeholder="Password" />
-                        <label asp-for="AccountInput.Password" class="control-label" for="password">パスワード</label>
+                        <label asp-for="AccountInput.Password" class="control-label" for="password">Password</label>
                         <span asp-validation-for="AccountInput.Password" class="text-danger"></span>
                     </div>
-                    <button type="submit" class="btn btn-primary submit_btn w-100 my-4" id="btnLogin">コグイン</button>
+                    <button type="submit" class="btn btn-primary submit_btn w-100 my-4" id="btnLogin">Login</button>
                 </form>
                 <p>または</p>
                 <div class="">
                     <button class="border bg-white w-100 d-flex justify-content-between align-items-center p-2 my-3 shadow-sm fw-bold">
                         <img src="~/img/icons/google-logo.svg"
                              alt="google-logo" height="18px">
-                        <a class="text-decoration-none text-dark w-100" href="#">Googleで続ける</a>
+                        <a class="text-decoration-none text-dark w-100" href="#">Continue with Google</a>
                     </button>
                     <button class="border bg-white w-100 d-flex justify-content-between align-items-center p-2 my-3 shadow-sm fw-bold">
                         <img src="~/img/icons/microsoft-logo.svg"
                              alt="Microsoft-logo" height="18px">
-                        <a class="text-decoration-none text-dark w-100" href="#">Microsoftで続ける</a>
+                        <a class="text-decoration-none text-dark w-100" href="#">Continue with Microsoft</a>
                     </button>
                     <button class="border bg-white w-100 d-flex justify-content-between align-items-center p-2 my-3 shadow-sm fw-bold">
                         <img src="~/img/icons/apple-logo.svg"
                              alt="Apple-logo" height="18px">
-                        <a class="text-decoration-none text-dark w-100" href="#">Appleで続ける</a>
+                        <a class="text-decoration-none text-dark w-100" href="#">Continue with Apple</a>
                     </button>
                     <button class="border bg-white w-100 d-flex justify-content-between align-items-center p-2 my-3 shadow-sm fw-bold">
                         <img src="~/img/icons/slack-logo.svg"
                              alt="Apple-logo" height="18px">
-                        <a class="text-decoration-none text-dark w-100" href="#">Slackで続ける</a>
+                        <a class="text-decoration-none text-dark w-100" href="#">Continue with Slack</a>
                     </button>
                 </div>
                 <hr class="m-0 mt-5">
                 <div class="pt-3 align-top">
-                    <a href="#" class="text-decoration-none">ログインできない?</a>
+                    <a href="#" class="text-decoration-none">Cann't login?</a>
                     <div class="p-1 d-inline align-middle">.</div>
-                    <a asp-page="./SignUp">登録</a> 
+                    <a asp-page="./SignUp">Sign Up</a> 
                 </div>
             </div>
             <footer>
-                <p class="text-center pt-3"><a href="#" class="text-decoration-none">個人情報保護方針</a> . <a href="#" class="text-decoration-none">利用規約</a></p>
+                <p class="text-center pt-3"><a href="#" class="text-decoration-none">Privacy policy</a> . <a href="#" class="text-decoration-none">Terms of service</a></p>
             </footer>
         </div>
     </div>
