--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -21,26 +21,26 @@ Function : Layout for guest *@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav">
-                    <a href="#" class="nav-item nav-link active">解決法</a>
-                    <a href="#" class="nav-item nav-link active">商品</a>
-                    <a href="#" class="nav-item nav-link active">セクター</a>
-                    <a href="#" class="nav-item nav-link active">価格</a>
-                    <a href="#" class="nav-item nav-link active">私たち</a>
+                    <a href="#" class="nav-item nav-link active">Solution</a>
+                    <a href="#" class="nav-item nav-link active">Product</a>
+                    <a href="#" class="nav-item nav-link active">Branch</a>
+                    <a href="#" class="nav-item nav-link active">Price</a>
+                    <a href="#" class="nav-item nav-link active">About</a>
                 </div>
                 <div class="navbar-nav ms-auto">
                     <a class="nav-item">
                         <div class="dropdown mx-2 d-none d-lg-block">
                             <a class="btn btn-outline-primary meet-create dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                <span class="d-lg-inline">ミーティングを作成</span>
+                                <span class="d-lg-inline">Try meet</span>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><span class="dropdown-item">会話のミーティング</span></li>
-                                <li><span class="dropdown-item">仕事のミーティング</span></li>
+                                <li><span class="dropdown-item">For businesses</span></li>
+                                <li><span class="dropdown-item">For Everyone</span></li>
                             </ul>
                         </div>
                     </a>
 
-                    <a class="nav-item btn btn-primary" style="color:white;" type="button" asp-page="/Login">ログイン</a>
+                    <a class="nav-item btn btn-primary" style="color:white;" type="button" asp-page="/Login">Log in</a>
 
                 </div>
             </div>
