--- a/Pages/SignUp.cshtml
+++ b/Pages/SignUp.cshtml
@@ -10,50 +10,50 @@
 				<img decoding="async" src="~/img/logo.png" alt="">
 			</div>
 			<div class="rounded bg-white shadow p-5">
-				<h3 class="text-dark fw-bolder fs-4 mb-2">アカウントを作成</h3>
+				<h3 class="text-dark fw-bolder fs-4 mb-2">Sign Up</h3>
 
 				<div class="fw-normal text-muted mb-2">
-					アカウントをお持ちですか? <a href="index.html" class="text-primary fw-bold text-decoration-none">サインイン</a>
+					Already have an account? <a href="index.html" class="text-primary fw-bold text-decoration-none">Sign In</a>
 				</div>
 				<br />
 				<form  method="post">
 					<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 					<div class="form-floating mb-3">
 						<input asp-for="User.Name" class="form-control" id="fullName" placeholder="name@example.com" />
-						<label asp-for="User.Name" class="control-label" for="fullName">名前</label>
+						<label asp-for="User.Name" class="control-label" for="fullName">Name</label>
 						<span asp-validation-for="User.Name" class="text-danger"></span>
 					</div>
 					<div class="form-floating mb-3">
 						<input asp-for="User.BirthDate" id="birthDate" class="form-control" type="date" />
-						<label asp-for="User.BirthDate" for="birthDate" class="control-label">誕生日</label>
+						<label asp-for="User.BirthDate" for="birthDate" class="control-label">Birthday</label>
 						<span asp-validation-for="User.BirthDate" class="text-danger"></span>
 					</div>
 					<div class="form-floating mb-3">
 						<input asp-for="User.Phone" id="phone" class="form-control"  />
-						<label asp-for="User.Phone" for="phone" class="control-label">電話番号</label>
+						<label asp-for="User.Phone" for="phone" class="control-label">Phone Number</label>
 						<span asp-validation-for="User.Phone" class="text-danger"></span>
 					</div>
 					<div class="form-floating mb-3">
 						<input asp-for="User.Email" class="form-control" type="email id="email" placeholder="name@example.com" />
-						<label asp-for="User.Email" class="control-label" for="email">メールアドレス</label>
+						<label asp-for="User.Email" class="control-label" for="email">Email</label>
 						<span asp-validation-for="User.Email" class="text-danger"></span>
 					</div>
 					<div class="form-floating mb-3">
 						<input asp-for="User.Password" class="form-control" 　type="password" id="passwordSignUp" placeholder="Password" />
-						<label asp-for="User.Password" class="control-label" for="passwordSignUp">パスワード</label>
+						<label asp-for="User.Password" class="control-label" for="passwordSignUp">Password</label>
 						<span asp-validation-for="User.Password" class="text-danger"></span>
 					</div>
 					<div class="form-floating mb-3">
 						<input type="password" class="form-control" id="confirmPassword" placeholder="Password">
-						<label for="confirmPassword">確認パスワード</label>
+						<label for="confirmPassword">Confirm Password</label>
 					</div>
 					<div class="form-check d-flex align-items-center">
 						<input class="form-check-input" type="checkbox" id="gridCheck" checked>
 						<label class="form-check-label ms-2" for="gridCheck">
-							<a href="#">利用規約</a>を同意する
+							Accept <a href="#">Terms of service</a>
 						</label>
 					</div>
-					<button type="submit" class="btn btn-primary submit_btn w-100 my-4" id="btnLogin">登録</button>
+					<button type="submit" class="btn btn-primary submit_btn w-100 my-4" id="btnLogin">Create</button>
 				</form>
 			</div>
 		</div>
