--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,65 +1,68 @@
 ﻿@page
+@using ggmeet.Areas.Identity.Pages.Account
 @model RegisterModel
 @{
     ViewData["Title"] = "Register";
 }
+@{
+	Layout = "_Layout2";
+}
+<div class="d-flex justify-content-around align-items-center">
+	<div class="container">
+		<div class="col-sm-8 offset-sm-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4 text-center">
+			<div class="logo">
+				<img decoding="async" src="~/img/logo.png" alt="">
+			</div>
+			<div class="rounded bg-white shadow p-5">
+				<h3 class="text-dark fw-bolder fs-4 mb-2">Sign Up</h3>
 
-<h1>@ViewData["Title"]</h1>
-
-<div class="row">
-    <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email">Email</label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.Password">Password</label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.ConfirmPassword">Confirm Password</label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-        </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
+				<div class="fw-normal text-muted mb-2">
+					Already have an account? <a asp-area="Identity" asp-page="/Account/Login" class="text-primary fw-bold text-decoration-none">Login</a>
+				</div>
+				<br />
+				<form method="post">
+					<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+					<div class="form-floating mb-3">
+						<input asp-for="Input.Name" class="form-control" id="fullName" placeholder="name@example.com" />
+						<label asp-for="Input.Name" class="control-label" for="fullName">Name</label>
+						<span asp-validation-for="Input.Name" class="text-danger"></span>
+					</div>
+					<div class="form-floating mb-3">
+						<input asp-for="Input.BirthDate" id="birthDate" class="form-control" type="date" />
+						<label asp-for="Input.BirthDate" for="birthDate" class="control-label">Birthday</label>
+						<span asp-validation-for="Input.BirthDate" class="text-danger"></span>
+					</div>
+					<div class="form-floating mb-3">
+						<input asp-for="Input.Phone" id="phone" class="form-control" />
+						<label asp-for="Input.Phone" for="phone" class="control-label">Phone Number</label>
+						<span asp-validation-for="Input.Phone" class="text-danger"></span>
+					</div>
+					<div class="form-floating mb-3">
+						<input asp-for="Input.Email" class="form-control" type="email id="email" placeholder="name@example.com" />
+						<label asp-for="Input.Email" class="control-label" for="email">Email</label>
+						<span asp-validation-for="Input.Email" class="text-danger"></span>
+					</div>
+					<div class="form-floating mb-3">
+						<input asp-for="Input.Password" class="form-control" 　type="password" id="passwordSignUp" placeholder="Password" />
+						<label asp-for="Input.Password" class="control-label" for="passwordSignUp">Password</label>
+						<span asp-validation-for="Input.Password" class="text-danger"></span>
+					</div>
+					<div class="form-floating mb-3">
+						<input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
+						<label asp-for="Input.ConfirmPassword">Confirm Password</label>
+						<span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+					</div>
+					<div class="form-check d-flex align-items-center">
+						<input class="form-check-input" type="checkbox" id="gridCheck" checked>
+						<label class="form-check-label ms-2" for="gridCheck">
+							Accept <a href="#">Terms of service</a>
+						</label>
+					</div>
+					<button type="submit" class="btn btn-primary submit_btn w-100 my-4" id="btnLogin">Create</button>
+				</form>
+			</div>
+		</div>
+	</div>
 </div>
 
 @section Scripts {
