--- a/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using WebApplication1.Areas.Identity
-@using WebApplication1.Areas.Identity.Pages
+@using ggmeet.Areas.Identity
+@using ggmeet.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using WebApplication1.Areas.Identity.Data
+@using ggmeet.Data
