--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -27,22 +27,7 @@ Function : Layout for guest *@
                     <a href="#" class="nav-item nav-link active">Price</a>
                     <a href="#" class="nav-item nav-link active">About</a>
                 </div>
-                <div class="navbar-nav ms-auto">
-                    <a class="nav-item">
-                        <div class="dropdown mx-2 d-none d-lg-block">
-                            <a class="btn btn-outline-primary meet-create dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                <span class="d-lg-inline">Try meet</span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><span class="dropdown-item">For businesses</span></li>
-                                <li><span class="dropdown-item">For Everyone</span></li>
-                            </ul>
-                        </div>
-                    </a>
-
-                    <a class="nav-item btn btn-primary" style="color:white;" type="button" asp-page="/Login">Log in</a>
-
-                </div>
+                <partial name="_LoginPartial" />
             </div>
 
         </div>
