--- a/Pages/Shared/_LoginPartial.cshtml
+++ b/Pages/Shared/_LoginPartial.cshtml
@@ -1,10 +1,10 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using WebApplication1.Areas.Identity.Data
+@using ggmeet.Data;
 
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
 
-<ul class="navbar-nav">
+
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
@@ -18,11 +18,19 @@
 }
 else
 {
-    <li class="nav-item">
-        <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
+    <div class="navbar-nav ms-auto">
+        <a class="nav-item">
+            <div class="dropdown mx-2 d-none d-lg-block">
+                <a class="btn btn-outline-primary meet-create dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                    <span class="d-lg-inline">Try meet</span>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><span class="dropdown-item">For businesses</span></li>
+                    <li><span class="dropdown-item">For Everyone</span></li>
+                </ul>
+            </div>
+        </a>
+        <a class="nav-item btn btn-primary" style="color:white;" type="button" asp-area="Identity" asp-page="/Account/Login">Log in</a>
+    </div>
 }
-</ul>
+
